// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Tooltip aligned left unchanged 1`] = `
<div>
  <div
    class="memori-tooltip"
  >
    <button
      class="memori-tooltip__trigger"
      data-popup-open=""
      id="base-ui-_r_9_"
      type="button"
    >
      Hover me
    </button>
  </div>
</div>
`;

exports[`renders Tooltip aligned right unchanged 1`] = `
<div>
  <div
    class="memori-tooltip"
  >
    <button
      class="memori-tooltip__trigger"
      data-popup-open=""
      id="base-ui-_r_h_"
      type="button"
    >
      Hover me
    </button>
  </div>
</div>
`;

exports[`renders Tooltip aligned top left unchanged 1`] = `
<div>
  <div
    class="memori-tooltip"
  >
    <button
      class="memori-tooltip__trigger"
      data-popup-open=""
      id="base-ui-_r_d_"
      type="button"
    >
      Hover me
    </button>
  </div>
</div>
`;

exports[`renders Tooltip aligned top right unchanged 1`] = `
<div>
  <div
    class="memori-tooltip"
  >
    <button
      class="memori-tooltip__trigger"
      data-popup-open=""
      id="base-ui-_r_l_"
      type="button"
    >
      Hover me
    </button>
  </div>
</div>
`;

exports[`renders Tooltip disabled unchanged 1`] = `
<div>
  Hover me
</div>
`;

exports[`renders Tooltip unchanged 1`] = `
<div>
  <div
    class="memori-tooltip"
  >
    <button
      class="memori-tooltip__trigger"
      id="base-ui-_r_1_"
      type="button"
    >
      Hover me
    </button>
  </div>
</div>
`;

exports[`renders Tooltip visible unchanged 1`] = `
<div>
  <div
    class="memori-tooltip"
  >
    <button
      class="memori-tooltip__trigger"
      data-popup-open=""
      id="base-ui-_r_5_"
      type="button"
    >
      Hover me
    </button>
  </div>
</div>
`;

exports[`renders Tooltip with jsx content unchanged 1`] = `
<div>
  <div
    class="memori-tooltip"
  >
    <button
      class="memori-tooltip__trigger"
      id="base-ui-_r_3_"
      type="button"
    >
      Hover me
    </button>
  </div>
</div>
`;
